<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:id="@+id/ListLayout"
              android:layout_height="fill_parent"
              android:layout_gravity="end|right">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/expenseName"
                android:id="@+id/expenseName"
                android:layout_gravity="left|center"
            android:layout_marginLeft="50dp"
            android:maxLength="25"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txttipotexto"
            android:id="@+id/TipoTexto"
            android:layout_gravity="right"
            android:layout_marginTop="-15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categoria"

            android:layout_marginLeft="50dp"
            android:id="@+id/txt_categoria" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data"

            android:layout_gravity="right"
            android:layout_marginRight="45dp"
            android:id="@+id/txt_date" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueNumber"
                android:id="@+id/valueNumber"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

</LinearLayout>