<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:id="@+id/ListLayoutProposal"
    android:layout_height="fill_parent"
    android:layout_gravity="end|right">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/container_financing_proposals_labels">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/txttotalvaluelist"
            android:enabled="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtparcelsnumberonthelist"
            android:id="@+id/textView10"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:enabled="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:text="@string/txtfirstmonthlist"
            android:enabled="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="% Juros"
            android:id="@+id/textView12"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="45dp"
            android:enabled="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tipo de  Juros"
            android:id="@+id/textView"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="45dp"
            android:enabled="true"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/container_financing_proposals_list">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_value"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/txttotalvaluelist"
            android:enabled="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtparcelsnumberonthelist"
            android:id="@+id/financing_parcels_number"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:enabled="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_first_month"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:text="@string/txtfirstmonthlist"
            android:enabled="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtinterestonthelist"
            android:id="@+id/financing_proposal_Interest"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="45dp"
            android:enabled="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tipo de juros"
            android:id="@+id/txt_type_interest"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="45dp"
            android:enabled="true"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>